# robotsix-modules

./: .coverage  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  404.html  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  mkdocs_hooks.py  modules.yaml  objects.inv  pyproject.toml  vulture_whitelist.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  deps-bump.yml  docs.yml  lint-workflows.yml  release.yml  scorecard.yml
.robotsix-mill/: config.yaml
.robotsix-mill/periodic/: audit.yaml  bc_check.yaml  board_cleanup.yaml  module_curator.yaml  repo_description_sync.yaml  security_posture.yaml  state_sync.yaml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
changelog.d/: 20260706T081436Z-add-towncrier-check-pre-commit-hook-to-p-2862.misc.md  20260706T081436Z-add-towncrier-to-dev-dependencies-and-co-319e.misc.md  20260706T081436Z-create-scripts-release-convenience-scrip-fa22.misc.md  20260706T081436Z-update-contributing-md-release-checklist-699b.misc.md  20260714T165300Z-robotsix-modules-enable-baseline-periodi-4602.misc.md  20260714T174225Z-remove-unused-rewrite-in-glob-paths-vers-3619.misc.md  20260715T192538Z-robotsix-modules-enable-module-curator-p-c827.misc.md  20260715T202234Z-classify-changelog-d-assign-changelog-fr-2b25.misc.md  20260716T163127Z-robotsix-modules-enable-completeness-che-ca19.misc.md  20260716T165528Z-docs-findingkind-missing-from-mkdocs-api-9c37.misc.md  20260716T165528Z-fix-configstructureerror-is-defined-expo-910c.misc.md  20260717T165142Z-docs-check-coverage-missing-from-docs-in-3365.misc.md  20260717T165142Z-fix-compute-default-globs-missing-from-t-ae44.misc.md  20260718T081727Z-robotsix-modules-enable-audit-periodic-w-dd16.misc.md  20260718T081727Z-robotsix-modules-enable-copy-paste-perio-2157.misc.md  20260718T081727Z-robotsix-modules-enable-repo-description-a5f0.misc.md  20260718T081728Z-robotsix-modules-enable-state-sync-perio-a9f2.misc.md  20260718T084059Z-move-pre-commit-hooks-yaml-from-docs-mod-9ecf.misc.md  20260718T084100Z-align-pre-commit-mypy-version-with-pypro-d6a7.misc.md  20260719T085054Z-add-uv-malware-check-1-to-ci-uv-sync-ste-41e2.misc.md  20260719T154210Z-robotsix-modules-enable-changelog-autofi-6f3e.misc.md  20260719T170034Z-fix-configparseerror-defined-exported-ca-bf2a.misc.md  20260719T232926Z-robotsix-modules-enable-docstring-covera-daa6.misc.md  20260719T232926Z-robotsix-modules-enable-health-periodic-e5eb.misc.md  20260719T232926Z-robotsix-modules-enable-survey-periodic-80b2.misc.md  20260720T003648Z-add-changelog-fragment-reminder-to-pr-te-fa07.misc.md  20260720T075504Z-remove-unused-yamlparseerror-class-from-3ba1.misc.md  20260720T075933Z-rename-changelog-fragment-from-misc-md-t-5216.misc.md  20260720T085333Z-update-docs-schema-reference-md-complete-06b1.misc.md  20260720T170219Z-fix-add-main-py-to-enable-python-m-robot-5e2b.misc.md  20260721T012757Z-add-fragment-type-guidance-to-contributi-6e0a.misc.md  20260721T014605Z-fix-broken-for-loop-indentation-in-ci-fr-93d7.misc.md  20260721T170214Z-fix-yamlreaderror-raised-by-public-load-b396.misc.md  20260721T172634Z-rename-changelog-fragment-from-misc-md-t-e209.misc.md  20260722T011312Z-classify-changelog-d-gitkeep-assign-to-r-20e4.misc.md  20260722T020730Z-expose-changelog-md-as-a-changelog-page-35f9.misc.md  20260722T090359Z-add-strict-markers-to-pytest-config-in-p-5cd1.misc.md  20260722T090359Z-pin-vulture-dev-dependency-with-a-minimu-3dbe.misc.md  20260722T165851Z-fix-yamlconfigerror-defined-but-never-re-de17.misc.md  20260723T025226Z-add-pytest-test-to-validate-docs-schema-a551.misc.md  (+8 more)
cli/usage/: index.html
docs/: api.md  index.md  modules.yaml  schema-reference.md
docs/cli/: usage.md
docs/validation/: api.md
schema-reference/: index.html
scripts/: build  check  clean  docs  lint  release  test
search/: search_index.json
src/robotsix_modules/: __init__.py  __main__.py  _exceptions.py  _yaml.py  cli.py  registration.py  schema.py
src/robotsix_modules/cli/: __init__.py  _exit_codes.py
src/robotsix_modules/schemas/: __init__.py
src/robotsix_modules/validation/: __init__.py  _findings.py  registration.py  schema.py
src/robotsix_modules/validation/schemas/: __init__.py  modules.schema.yaml
tests/: conftest.py  test_cli.py  test_init.py  test_registration.py  test_schema.py
tests/cli/: test_cli.py
tests/cli/fixtures/: invalid_modules.yaml
tests/fixtures/: overlapping_modules.yaml
tests/validation/: test_findings.py  test_init.py  test_registration.py  test_schema.py
tests/validation/fixtures/: default_globs_modules.yaml  invalid_modules.yaml  valid_modules.yaml
validation/api/: index.html
