[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-modules"
version = "0.2.0"
description = "Shared JSON-Schema-driven module-taxonomy validation for robotsix projects."
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Damien Robotsix" }]
dependencies = ["robotsix-yaml-config", "jsonschema>=4"]

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-cov>=5", "ruff>=0.15.18", "mypy>=1.15", "deptry>=0.20", "pip-audit>=2.10.1", "bandit[toml]>=1.8", "vulture"]

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-modules"
Repository = "https://github.com/damien-robotsix/robotsix-modules"
Issues = "https://github.com/damien-robotsix/robotsix-modules/issues"
Changelog = "https://github.com/damien-robotsix/robotsix-modules/blob/main/CHANGELOG.md"

[project.scripts]
robotsix-modules = "robotsix_modules.cli:main"
robotsix-modules-validate = "robotsix_modules.cli:validate_main"

[tool.uv.sources]
robotsix-yaml-config = { git = "https://github.com/damien-robotsix/robotsix-yaml-config.git", rev = "d302ee4ada88905efa48333894ed19519f9f7920" }

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_modules"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/validation/**" = ["S101", "S607"]
"tests/cli/**" = ["S101", "S607"]
"tests/conftest.py" = ["S603", "S607"]
"vulture_whitelist.py" = ["B018", "F821"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[tool.deptry]
known_first_party = ["robotsix_modules"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pytest", "pytest-cov", "ruff", "mypy", "deptry", "pip-audit", "bandit", "vulture"]

[tool.bandit]
exclude_dirs = ["tests/validation", "tests/cli"]
skips = ["B101"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["robotsix_modules"]

[tool.coverage.report]
fail_under = 80
